gts-macros/tests/compile_fail/const_values_type_mismatch_bool_to_int.stderr
error[E0308]: mismatched types
  --> tests/compile_fail/const_values_type_mismatch_bool_to_int.rs:20:1
   |
20 | / #[struct_to_gts_schema(
21 | |     dir_path = "schemas",
22 | |     base = MismatchBIntBaseV1,
23 | |     schema_id = "gts.x.test.mismatch.bint.v1~x.test.mismatch.bool_to_int.v1~",
...  |
26 | |     const_values = "count=true"
27 | | )]
   | |  ^
   | |  |
   | |__expected `i32`, found `bool`
   |    expected due to the type of this binding
   |
   = note: this error originates in the attribute macro `struct_to_gts_schema` (in Nightly builds, run with -Z macro-backtrace for more info)
